Fix UI layout bug

--- a/app/pricing/PricingSection.module.css
+++ b/app/pricing/PricingSection.module.css
@@ -93,6 +93,7 @@
 @media screen and (min-width: 1024px) {
   .offerContainer {
     display: flex;
+    justify-content: center;
   }
 
   .offerContainerHeader {
